--- a/package.json
+++ b/package.json
@@ -5,18 +5,20 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js",
-    "start-dev": "nodemon node app.js"
+    "start": "pm2 start ecosystem.config.js"
   },
   "author": "Rehman AKram",
   "license": "MIT",
   "dependencies": {
+    "bull": "^4.16.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.3",
-    "nodemon": "^3.1.4"
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.1.4",
+    "redis": "^4.7.0"
   },
   "repository": {
     "type": "git",
